<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_seperator_connection">
        <Preference
            android:key="KEY_RS_SETTINGS"
            android:summary="@string/pref_item_rs_conn_summary"
            android:title="@string/pref_item_rs_conn" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_seperator_channel">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="KEY_CHANNELS_SHOW_NOW_PLAYING"
            android:summary="@string/pref_item_channel_show_current_program_summary"
            android:title="@string/pref_item_channel_show_current_program" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="KEY_CHANNELS_SHOW_NOW_PLAYING"
            android:key="KEY_CHANNELS_SHOW_NOW_PLAYING_WIFI_ONLY"
            android:summary="@string/pref_item_channel_show_current_program_wifi_summary"
            android:title="@string/pref_item_channel_show_current_program_wifi" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="KEY_CHANNELS_USE_FAVS"
            android:summary="@string/pref_item_channel_fav_summary"
            android:title="@string/pref_item_channel_fav" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_seperator_player">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="KEY_USE_INTERNAL_PLAYER"
            android:summary="@string/pref_player_internal_summary"
            android:title="@string/pref_player_internal_title" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="KEY_PLAYER_SUBTITLE_SIZE"
            android:max="200"
            android:title="@string/pref_player_subtitle_size"
            app:min="50"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="KEY_PLAYER_PIP_ON_HOME"
            android:summary="@string/pref_player_pip_summary"
            android:title="@string/pref_player_pip_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_seperator_xmltv">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="KEY_XMLTV_ENABLED"
            android:summary="@string/pref_xmltv_enabled_summary"
            android:title="@string/pref_xmltv_enabled_title" />

        <EditTextPreference
            android:defaultValue="http://"
            android:dependency="KEY_XMLTV_ENABLED"
            android:dialogTitle="@string/pref_xmltv_url_dialog_title"
            android:inputType="textUri"
            android:key="KEY_XMLTV_URL"
            android:summary="@string/pref_xmltv_url_summary"
            android:title="@string/pref_xmltv_url_title" />

        <ListPreference
            android:defaultValue="6"
            android:dependency="KEY_XMLTV_ENABLED"
            android:entries="@array/pref_xmltv_interval_entries"
            android:entryValues="@array/pref_xmltv_interval_values"
            android:key="KEY_XMLTV_REFRESH_INTERVAL"
            android:summary="@string/pref_xmltv_interval_summary"
            android:title="@string/pref_xmltv_interval_title" />

        <Preference
            android:dependency="KEY_XMLTV_ENABLED"
            android:key="KEY_XMLTV_CHANNEL_MAPPING"
            android:summary="@string/pref_xmltv_mapping_summary"
            android:title="@string/pref_xmltv_mapping_title" />

    </PreferenceCategory>

</PreferenceScreen>
